--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,7 +1,74 @@
 @import 'vars';
 @import 'fonts';
-@import 'reset';
 @import 'global';
+@import 'reset';
+
+.header{
+    padding: 50px 0;
+    &__inner{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+}
+
+.menu{
+    
+    &__list{
+        display: flex;
+    }
+    &__list-item + .menu__list-item{
+        padding-left: 30px;
+    }
+    &__list-link{
+        color: $default;
+        line-height: 12px;
+        font-size: 15px;
+        padding:0 2px 5px;
+        transition: all .4s;
+        @extend %Rubik-Medium;
+        &:hover{
+            color: #fcd7b6;
+            border-bottom: 1px solid #fcd7b6;
+        }
+    }
+}
+
+.user-nav{
+    display: flex;
+    &__link{
+        position: relative;
+        cursor: default;
+    }
+    &__link + .user-nav__link{
+        padding-left: 20px;
+    }
+    &__num{
+        position: absolute;
+        width: 16px;
+        height: 16px;
+        border-radius: 50%;
+        background-color: white;
+        top: 8px;
+        right: 5px;
+        font-size: 12px;
+        color: $first;
+        text-align: center;
+        line-height: 16px; 
+        @extend  %DMSans-Regular;
+    }
+    &__link-bg{
+        width: 46px;
+        height: 46px;
+        background-color: #fcd7b6;
+        border-radius: 50%;
+    }
+    &__link-img{
+        margin: 0 auto;
+        padding-top: 15px;
+        cursor: pointer;
+    }
+}
 
 
 
