--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,9 +1,30 @@
+html, body{
+    height: 100%;
+}
+
 body{
     font-size: 16px;
     @extend %Rubik-Regular;
+    display: flex;
+    flex-direction: column;
 }
-.container{
+
+.main{
+    flex-grow: 1;
+}
+
+.container__one{
     max-width: 1770px;
     margin: 0 auto;
     padding: 0 45px;
+}
+.container__two{
+    max-width: 1170px;
+    margin: 0 auto;
+}
+
+a{
+    color: #7b7b7b;
+    font-size: 14px;
+    @extend %Rubik-Regular;
 }
