--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -28,3 +28,11 @@ a{
     font-size: 14px;
     @extend %Rubik-Regular;
 }
+
+.title{
+    margin-bottom: 30px;
+    @extend %DMSans-Bold;
+    font-size: 36px;
+    color: $title;
+}
+
